@@ -11,15 +11,12 @@ import com.cafetron.wallet.exception.WalletNotFoundException;
 import com.cafetron.wallet.repository.TransactionRepository;
 import com.cafetron.wallet.repository.WalletRepository;
 import org.springframework.data.domain.Page;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class WalletServiceImpl implements WalletService {
@@ -35,27 +32,22 @@ public class WalletServiceImpl implements WalletService {
     @Override
     @Transactional
     public void debit(Long userId, BigDecimal amount, String description) {
-        // 1. find wallet by userId, throw if not found
-        // 2. check balance >= amount, throw IllegalArgumentException if not
-        // 3. subtract amount and save wallet
-        // 4. build and save a Transaction with type=DEBIT, wallet, amount, description
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("Amount must be positive");
-        }
-        Wallet wallet = walletRepository.findByUser_Id(userId).orElseThrow(() -> new WalletNotFoundException(userId));
+        validateCommonInputs(userId, amount, description, "debit");
 
-        if (wallet.getBalance().compareTo(amount) >= 0) {
-            wallet.setBalance(wallet.getBalance().subtract(amount));
-        } else {
+        Wallet wallet = walletRepository.findByUserIdForUpdate(userId)
+                .orElseThrow(() -> new WalletNotFoundException(userId));
+
+        if (wallet.getBalance().compareTo(amount) < 0) {
             throw new InsufficientFundsException(wallet.getBalance(), amount);
         }
 
+        wallet.setBalance(wallet.getBalance().subtract(amount));
         walletRepository.save(wallet);
 
         Transaction transaction = new Transaction();
         transaction.setWallet(wallet);
         transaction.setAmount(amount);
-        transaction.setDescription(description);
+        transaction.setDescription(description.trim());
         transaction.setType(TransactionType.DEBIT);
         transactionRepository.save(transaction);
     }
@@ -63,10 +55,9 @@ public class WalletServiceImpl implements WalletService {
     @Override
     @Transactional
     public void refund(Long userId, BigDecimal amount, String description) {
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("Amount must be positive");
-        }
-        Wallet wallet = walletRepository.findByUser_Id(userId)
+        validateCommonInputs(userId, amount, description, "refund");
+
+        Wallet wallet = walletRepository.findByUserIdForUpdate(userId)
                 .orElseThrow(() -> new WalletNotFoundException(userId));
 
         wallet.setBalance(wallet.getBalance().add(amount));
@@ -75,7 +66,7 @@ public class WalletServiceImpl implements WalletService {
         Transaction transaction = new Transaction();
         transaction.setWallet(wallet);
         transaction.setAmount(amount);
-        transaction.setDescription(description);
+        transaction.setDescription(description.trim());
         transaction.setType(TransactionType.REFUND);
         transactionRepository.save(transaction);
     }
@@ -83,24 +74,24 @@ public class WalletServiceImpl implements WalletService {
     @Override
     @Transactional
     public void topUp(Long userId, BigDecimal amount) {
-        Wallet wallet = walletRepository.findByUser_Id(userId)
+        validateUserAndAmount(userId, amount, "top-up");
+
+        Wallet wallet = walletRepository.findByUserIdForUpdate(userId)
                 .orElseThrow(() -> new WalletNotFoundException(userId));
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("Top-up amount must be positive");
-        }
 
         wallet.setBalance(wallet.getBalance().add(amount));
         walletRepository.save(wallet);
+
         Transaction transaction = new Transaction();
         transaction.setWallet(wallet);
         transaction.setAmount(amount);
         transaction.setType(TransactionType.TOP_UP);
-        transaction.setDescription("Wallet Top-Up");
+        transaction.setDescription("Wallet top-up");
         transactionRepository.save(transaction);
-
     }
 
     @Override
+    @Transactional(readOnly = true)
     public WalletResponseDto getWallet(Long userId) {
         Wallet wallet = walletRepository.findByUser_Id(userId)
                 .orElseThrow(() -> new WalletNotFoundException(userId));
@@ -111,20 +102,18 @@ public class WalletServiceImpl implements WalletService {
                 .balance(wallet.getBalance())
                 .updatedAt(wallet.getUpdatedAt())
                 .build();
-
-
     }
 
     @Override
+    @Transactional(readOnly = true)
     public PagedTransactionDto getTransactions(Long userId, Pageable pageable) {
         Wallet wallet = walletRepository.findByUser_Id(userId)
                 .orElseThrow(() -> new WalletNotFoundException(userId));
 
-        Page<Transaction> page=transactionRepository.findByWallet_IdOrderByCreatedAtDesc(wallet.getId(),  pageable);
-        List<TransactionResponseDto> transactions=page.getContent()
-                .stream()
+        Page<Transaction> page = transactionRepository.findByWallet_IdOrderByCreatedAtDesc(wallet.getId(), pageable);
+        List<TransactionResponseDto> transactions = page.getContent().stream()
                 .map(this::mapToTransactionDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return PagedTransactionDto.builder()
                 .transactions(transactions)
@@ -132,10 +121,7 @@ public class WalletServiceImpl implements WalletService {
                 .totalPages(page.getTotalPages())
                 .totalElements(page.getTotalElements())
                 .build();
-
-
     }
-
 
     private TransactionResponseDto mapToTransactionDto(Transaction transaction) {
         return TransactionResponseDto.builder()
@@ -143,8 +129,27 @@ public class WalletServiceImpl implements WalletService {
                 .type(transaction.getType())
                 .amount(transaction.getAmount())
                 .description(transaction.getDescription())
-                .orderId(transaction.getOrder()!= null ?transaction.getOrder().getId():null)
+                .orderId(transaction.getOrder() != null ? transaction.getOrder().getId() : null)
                 .createdAt(transaction.getCreatedAt())
                 .build();
+    }
+
+    private void validateCommonInputs(Long userId, BigDecimal amount, String description, String operation) {
+        validateUserAndAmount(userId, amount, operation);
+        if (description == null || description.trim().isEmpty()) {
+            throw new IllegalArgumentException("Description is required for wallet " + operation);
+        }
+    }
+
+    private void validateUserAndAmount(Long userId, BigDecimal amount, String operation) {
+        if (userId == null) {
+            throw new IllegalArgumentException("User ID is required for wallet " + operation);
+        }
+        if (amount == null) {
+            throw new IllegalArgumentException("Amount is required for wallet " + operation);
+        }
+        if (amount.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("Amount must be greater than zero for wallet " + operation);
+        }
     }
 }
